# tax-god-super-agent-copilot

./: .cursorignore  .dockerignore  .env.example  .gitignore  .replit  .replit-agent.json  BUILD_STATUS.md  COMMANDS.md  Dockerfile  IMPLEMENTATION_PLAN.md  LOCAL_DOCKER_SETUP.md  PRODUCTION_WIRING.md  QUICKSTART.md  README.md  REPLIT_AGENT_README.md  TAX_GOD_RELATED_FILES_INDEX.md  alembic.ini  docker-compose.yml  launch_docker.sh  launch_simple.sh  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  setup.sh  start_replit.sh  test_algorithms.py  test_trinity_integration.py
.dev/: INSTRUCTIONS.md  agents.json  integrity.json  locks.json  proposals.json
.githooks/: post-commit  pre-commit
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_clients.py  002_subscriptions.py  003_settings_audit.py  004_activity_tracking.py
app/: gui.py  main.py
app/api/: deps.py
app/api/v1/endpoints/: accounts.py  admin.py  advanced.py  analytics.py  audit.py  audit_trail.py  auth.py  bank_feeds.py  billing.py  businesses.py  chart_of_accounts.py  charts.py  chat.py  client_portal.py  clients.py  currency.py  data_io.py  dev_tracking.py  doc_generation.py  (+27 more)
app/core/: config.py  crypto.py  database.py  exceptions.py  logging_config.py  security.py
app/middleware/: audit_middleware.py  error_handler.py  request_id.py  security.py  security_headers.py  timeout.py
app/models/: __init__.py  account.py  activity.py  audit_event.py  bank_connection.py  business.py  chart_of_accounts.py  client.py  expense.py  integration.py  invoice.py  note.py  notification.py  portal_message.py  project.py  settings_audit.py  spreadsheet.py  subscription.py  team.py  time_entry.py  transaction.py  user.py  user_settings.py  vendor.py  webhook.py
app/services/: advanced_orchestrator.py  agent_gabriel.py  ai_service.py  audit_service.py  circuit_breaker.py  citation_engine.py  cost_governor.py  currency_service.py  doc_generator.py  document_intelligence.py  email_service.py  import_export_service.py  invoice_scheduler.py  notification_service.py  parallel_processor.py  pdf_service.py  roi_engine.py  swarm_cost_planner.py  tax_calculator.py  tax_planner.py  tax_writer.py  totp_service.py  webhook_service.py
app/services/integrations/: base.py  google_service.py  manager.py  quickbooks_service.py  roadmap_catalog.py
app/static/: manifest.json  sw.js
app/static/css/: olympus.css
app/static/js/: app.js  gate.js  paywall.js  utils.js
app/tasks/: __init__.py  celery_app.py  ops_tasks.py
app/templates/: index.html
db/: taxgod.db
db/migrations/: 001_initial_schema.up.sql
docs/: ARCHITECTURE.md  BUILD_LOG.md  CTO_VALIDATION_2026-06-05.md  CTO_VALIDATION_FINAL_2026-06-05.md  CTO_VALIDATION_PRODUCTION_2026-06-05.md  CTO_VALIDATION_v2_2026-06-05.md  DEV_LOG.md  HOOKS_AND_PROTOCOLS.md  MEMORY_AUDIT.md  RAILWAY_DEPLOYMENT.md  RUN_BETTER.md  SESSION_3_2026-06-05.md  SESSION_LOG_2026-06-05.md  SKILLS.md  UPGRADE_PLAN_v4.md
integrations/: cursor-agent.ts  tsconfig.json
integrations/trinity-consortium/: README.md  tax-god-agent.ts  tax-god-registration.ts
integrations/trinity-consortium-full/: README.md
integrations/trinity-consortium-full/agents/: ai-audit-engine.ts  compute-broker.service.ts  oracle-copilot.routes.ts  workflow.routes.ts
integrations/trinity-consortium-full/architecture/: KNOWLEDGE_BASE.md  TRINITY_AI_ARCHITECTURE.md  TRINITY_CONSORTIUM_COPILOT_BRIEFING.md  TRINITY_SYSTEM_ANALYTICS.md
integrations/trinity-consortium-full/documentation/: trinity_app_complete_documentation.md  trinity_app_executive_summary.md
integrations/trinity-consortium-full/swarm/: swarm.routes.ts
integrations/trinity-consortium/agent-system/: agent-definitions.ts  agent.ts
integrations/trinity-consortium/ai-tools/: auditor-tools.ts  engineer-tools.ts  index.ts  researcher-tools.ts
integrations/trinity-consortium/crew/: automation-engine.ts  crew.ts  durable-execution-engine.ts  langgraph.ts
integrations/trinity-consortium/task-decomposition/: 864b79d0-98c6-40b8-b2f6-bc43ad63c7c1.txt  task-decomposition.ts
monitoring/: prometheus.yml
scripts/: backup_db.py  cleanup-dev-ports.sh  cross-repo-sync.sh  healthcheck.py  install-hooks.sh  migrate_db.py  production_checklist.py  run-all-checks.sh  seed_admin.py  setup_replit_agent.py
specs/: BACKEND_INTEGRATIONS_AND_ALGORITHMS.md  DEEP-RESEARCH-ANALYSIS.md  INTEGRATION_ROADMAP_2026.md  PRACTICAL_NEXT_BACKLOG.md  README_ADDED_FILES.md  TAX-GOD-COMPLETE-DEPLOYMENT-SPEC.html  TAX-GOD-COMPLETE-DEPLOYMENT-SPEC.md  TAX_GOD_IMPLEMENTATION_SUMMARY_v1.md  TRINITY_GEMS_FOR_TAX_GOD.md  tax-god-ui-mockup-dashboard.html
specs/algorithms/: README.md  dtda.py  imra.py  requirements.txt  shva.py
specs/html_versions/: tax-god-comparison-tables (2).html  tax-god-complete-deployment-spec (1).html  tax-god-deployment-spec-part2 (1).html  tax-god-deployment-spec-part2.html
specs/swarm/: README.md  pyproject.toml  setup.cfg  setup.py
specs/swarm/swarm/: cli.py  config.py  orchestrator.py  state.py  worktree.py
specs/swarm/swarm/agents/: base.py  bugfix.py  docs.py  feature.py  refactor.py  review.py  tests.py
specs/swarm/swarm/tools/: codex_cli.py  llm.py  offline.py  openai_responses.py  repo_map.py  shell.py
specs/swarm_runner/: runner_server.py
specs/swarm_runner/swarm/: __init__.py  bots.py  cli.py  config.py  fractal.py  orchestrator.py  state.py  supervisor.py  worktree.py
tests/: conftest.py  test_accounts.py  test_advanced.py  test_analytics.py  test_audit.py  test_auth.py  test_billing.py  test_chat.py  test_cost_governor.py  test_crud_endpoints.py  test_dev_tracking.py  test_documents.py  test_e2e_pipeline.py  test_e2e_workflow.py  test_integration_manager.py  test_live_tiers.py  test_logs.py  test_notes.py  test_payments.py  test_profile.py  test_projects.py  test_receipts.py  test_roi_engine.py  test_security.py  test_settings.py  test_spreadsheets.py  test_tier1_features.py  test_tier2_features.py  test_time_entries.py  test_transactions.py  test_vendors.py
(+48 files in other folders)
