[project]
name = "tax-god-super-agent-copilot"
version = "3.3.0"
description = "Tax God Super Agent Co-Pilot — AI-powered multi-agent system for law, taxes, finance, and accounting"
requires-python = ">=3.11,<3.14"
license = {text = "Proprietary"}
authors = [{name = "Enzo Garoche"}]
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "jinja2>=3.1.0",
    "openai>=1.60.0",
    "anthropic>=0.42.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "pypdf>=5.1.0",
    "tenacity>=9.0.0",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.25", "pytest-cov>=6.0", "ruff>=0.9.0"]
server = ["redis>=5.2.0", "celery>=5.4.0", "asyncpg>=0.30.0", "prometheus-client>=0.21.0"]

[project.scripts]
tax-god = "app.gui:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "specs*"]

[tool.setuptools.package-data]
app = ["templates/**/*", "static/**/*"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "alembic/versions",
    ".mypy_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name (intentional in parser code)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # raise without from (sometimes intentional)
    "ARG001", # unused function argument (FastAPI deps)
    "ARG002", # unused method argument (interface stubs, **kwargs for extensibility)
    "SIM102", # nested if (readability preference)
    "SIM103", # return condition directly (readability preference)
    "SIM105", # contextlib.suppress (explicit try/except preferred for clarity)
    "SIM116", # dict instead of if/elif (readability preference)
    "UP042",  # str + Enum → StrEnum (keeping str,Enum for Python 3.10 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"app/main.py" = ["E402", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["alembic/", "venv/", ".venv/"]

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
